--- a/2021-05-09-go-programming-intro.org
+++ b/2021-05-09-go-programming-intro.org
@@ -38,6 +38,8 @@ tags: [tutorial, ide, chromebook]
   fmt.Println("Hello, 世界")
   #+end_src
 
-#+RESULTS:
-: Hello, 世界
+  #+RESULTS:
+  : Hello, 世界
+* Functions and Scope
+
 
