A primitive sample of local funcition

--- a/2021-05-09-go-programming-intro.org
+++ b/2021-05-09-go-programming-intro.org
@@ -42,4 +42,15 @@ tags: [tutorial, ide, chromebook]
   : Hello, 世界
 * Functions and Scope
 
+  #+begin_src go :imports "fmt"
+func main() {
+fmt.Printf("My number is: %d\n", triple_add(2, 3, 4))
+}
+func triple_add(a, b, c int) int{
+return a + b + c
+}
+  #+end_src
+
+  #+RESULTS:
+  : My number is: 9
 
