The second brain raw text dissection

--- a/2022-01-20-the-second-brain.org
+++ b/2022-01-20-the-second-brain.org
@@ -18,123 +18,136 @@ This is the [[https://www.youtube.com/watch?v=OP3dA2GcAh8&ab_channel=AliAbdaal][
 
 
 So last year I spent a stupidly large amount of money on this online
-course that genuinely changed my life it's called building a second
-brain and it promises to supercharge your productivity and creativity
-and like I was already pretty good at the productivity stuff in terms
+course that genuinely changed my life. It's called building a second
+brain and it promises to supercharge your productivity and creativity.
+And like I was already pretty good at the productivity stuff in terms
 of getting things done but through the course I discovered the field
 of personal knowledge management which is like the next level of
-productivity and it really helped me unlock kind of the next frontier
-the main idea is that over time you build up this second brain which
-is a digital note-taking system whereby anything that you read watch
-and listen to that resonates with you goes into your system and then
+productivity. And it really helped me unlock kind of the /next
+frontier/.
+
+The main idea is that over time you build up this second brain which
+is a digital note-taking system. Whereby anything that you read watch
+and listen to that resonates with you goes into your system. And then
 you can use your second brain to organize your ideas and thoughts and
 you can ultimately convert them into your creative output.
 
-
 In this video we're going to go over the 10 fundamental principles of
 building a second brain so that you can also maximize your
-productivity and creativity if you want to check out the course itself
-there will be a link in the video description and very excitingly I am
-now an official alumni mentor for the course so when it happens with a
-live cohorts which happened twice a year I'll be joining and offering
-my expert expert mentoring services on these live zoom calls but yeah
-not gonna lie it's super expensive like for me it was totally worth it
-because I derive value from this sort of stuff and if you're if you're
-the right sort of person if you're a knowledge worker it'll probably
-be worth it for you but it's definitely not for everyone and so
-hopefully in this video you'll learn the 10 fundamental principles of
-it so you can start getting some of the knowledge from this course
-without having to pay for it.
+productivity and creativity. If you want to check out the course
+itself there will be a link in the video description. And very
+excitingly I am now an official alumni mentor for the course. So when
+it happens with a live cohorts which happened twice a year I'll be
+joining and offering my expert mentoring services on these live zoom
+calls. But yeah not gonna lie it's super expensive like for me.
 
+It was totally worth it because I derive value from this sort of stuff
+and if you're the right sort of person if you're a knowledge
+worker it'll probably be worth it for you. But it's definitely /not for
+everyone/. And so hopefully in this video you'll learn the 10
+fundamental principles of it so you can start getting some of the
+knowledge from this course without having to pay for it.
 
-The first principle is borrowed creativity and that's the idea that we
-all intuitively think of creativity as kind of creating original stuff
-and like I don't consider myself a very creative person because I feel
-like I don't really have any original ideas but one of the key
+* A Borrowed Creativity
+
+The first principle is borrowed creativity. And that's the idea that
+we all intuitively think of creativity as kind of creating original
+stuff and like I don't consider myself a very creative person because
+I feel like I don't really have any original ideas. But one of the key
 insights from the course is that actually creativity is all about
-remixing stuff it's about taking ideas that already exist based on the
-things that you read watch and listen to and then adding your own spin
-to them and sort of combining things in interesting ways and that is
-what creativity is it's like what pablo picasso famously said that
-good artists copy but great artists steal and this is one of the key
-ideas of building a second brain it's the idea that if you have all of
-the little bits that resonate with you from all the stuff that you
-read watch and listen to if you have all that in one place it becomes
-a lot easier to start putting things together and to start seeing
-connections that you wouldn't have seen before whereas if you try and
-do that all in your head it doesn't work as well.
+remixing stuff. It's about taking ideas that already exist based on
+the things that you read watch and listen to and then adding your own
+spin to them and sort of combining things in interesting ways. And
+/that is/ what creativity is.
 
+It's like what Pablo Picasso famously said that: "Good artists copy
+but great artists steal." And this is one of the key ideas of building
+a second brain. It's the idea that if you have all of the little bits
+that resonate with you from all the stuff that you read watch and
+listen to. If you have all that in one place it becomes a lot easier
+to start putting things together and to start seeing connections that
+you wouldn't have seen before. Whereas if you try and do that all in
+your head it doesn't work as well.
+
+* A Capture Habit
 
 Secondly we've got the capture habit and this is a fundamental part of
-productivity it's based around the idea that our brains are for having
-ideas not for storing them and so whenever we get any sort of idea
-whenever anything resonates with us in any way from anything in life
-even if we're just walking down the park or if we're in the shower or
-if we're listening to a podcast we want to capture that idea as soon
-as possible because our brains are not going to hold on to it for a
-very long period of time since I took the course in 2019 I've now
-started taking this very very seriously and so I have all sorts of
-different mechanisms for capturing ideas depending on where I get them
-like if i'm listening to a podcast or an audiobook in the car and i've
-got my apple watch I will dictate voice notes into drafts the app on
-my apple watch and that'll sync automatically with evernote.
+productivity. It's based around the idea that /our brains are for
+having ideas, *not for* storing them/. And so whenever we get any sort
+of idea whenever anything resonates with us in any way from anything
+in life even if we're just walking down the park or if we're in the
+shower or if we're listening to a podcast we want to capture that idea
+as soon as possible because our brains are not going to hold on to it
+for a very long period of time.
 
+Since I took the course in 2019 I've now started taking this very very
+seriously. And so I have all sorts of different mechanisms for
+capturing ideas depending on where I get them like if i'm listening to
+a podcast or an audiobook in the car. And i've got my apple watch I
+will dictate voice notes into drafts the app on my apple watch and
+that'll sync automatically with evernote.
 
 Or if i'm reading a book on kindle I will highlight it on the kindle
-i'll add a note and that will automatically sync to evernote and
-notion through read-wise which is an amazing app and a couple of weeks
-ago I realized that when I was in the shower I was having so many
-ideas and I was just forgetting about them by the time I got out of
-the shower so I now have a waterproof notebook on the windowsill next
-to the shower next to me and so if I have an idea I capture it right
-there and then because I know that my own brain is a dumbass and it's
-not going to hold on to that idea for very long thirdly we've got the
-principle of idea recycling and the main view here is that ideas are
-not single use like I certainly used to think them but we can actually
-recycle ideas and reuse them over time and so one of the things we
-want to do in our second brain like whatever note-taking app we're
-using for it is.
+I'll add a note and that will automatically sync to evernote and
+notion through read-wise which is an amazing app. And a couple of
+weeks ago I realized that when I was in the shower I was having so
+many ideas and I was just forgetting about them by the time I got out
+of the shower. So I now have a waterproof notebook on the windowsill
+next to the shower next to me. And so if I have an idea I capture it
+right there. And then because I know that my own brain is a dumbass and
+it's not going to hold on to that idea for very long.
+
+* An Idea Recycling Principle
+
+Thirdly we've got the principle of idea recycling. And the main view
+here is that ideas are not single use like I certainly used to think
+them, but we can actually recycle ideas and reuse them over time. And
+so one of the things we want to do in our second brain like whatever
+note-taking app we're using for it is.
 
 We want to keep track of all of the stuff that we're creating and all
 of the ideas that we're using for certain projects because we can just
-reuse those ideas for others and so for me whenever I now make a video
-or write a blog post or a tweet or anything all of that goes straight
-into my second brain because I know somewhere down the line i'm gonna
-want to reuse some of that information and then it means that I've got
-these building blocks already that I can then build other things out
-of so for example most of the online courses that I make are actually
-just very easily put together from building blocks from my second
-brain based on this idea of idea recycling and it just meant that over
-the last few months even while I was working full-time as a doctor i
-could churn out these online classes on skillshare link in the video
-description and those have just made such a stupidly large amount of
-money relative to my full-time job salary and the fact that I had all
-of these ideas in my second brain system so that I could recycle them
-made that whole process infinitely easier.
+reuse those ideas for others. And so for me whenever I now make a
+video or write a blog post or a tweet or anything all of that goes
+straight into my second brain because I know somewhere down the line
+I'm gonna want to reuse some of that information. And then it means
+that I've got these building blocks already that I can then build
+other things out of. So for example most of the online courses that I
+make are actually just very easily put together from building blocks
+from my second brain based on this idea of idea recycling. And it just
+meant that over the last few months even while I was working full-time
+as a doctor I could churn out these online classes on skillshare (link
+in the video description). And those have just made such a stupidly
+large amount of money relative to my full-time job salary. And the
+fact that I had all of these ideas in my second brain system. So that
+I could recycle them made that whole process infinitely easier.
 
-The fourth principle is the idea of projects over categories and this
-is one of the things that I really learned early on when I when I took
-the course and that's I sort of used to take notes in the past but i
-would categorize things in terms of category like you know if I saw an
-interesting thing about marketing i'd put it in a marketing folder in
-evernote or if I saw an interesting thing about motivation i'd put it
-in a motivation folder but then i'd end up with these sort of folders
+* Projects over Categories
+
+The fourth principle is the idea of projects over categories. And this
+is one of the things that I really learned early on when I took
+the course. And that's I sort of used to take notes in the past, but I
+would categorize things in terms of category. Like, you know, if I saw an
+interesting thing about marketing I'd put it in a marketing folder in
+Evernote. Or if I saw an interesting thing about motivation I'd put it
+in a motivation folder. But then I'd end up with these sort of folders
 with lots of notes in them and didn't really have anything to do with
-them but now I think of it more in terms of projects and so if i
-capture an idea firstly it goes into my kind of general capture inbox
-but then I will try my best to associate it to some kind of project
-that i'm currently working on because then the information is going to
+them. But now I think of it more /in terms of projects/. And so if I
+capture an idea firstly it goes into my kind of general capture inbox.
+But then I will try my best to associate it to some kind of project
+that I'm currently working on because then the information is going to
 be directly useful rather than it just sitting in a bookmark folder
-that i'm never going to look at again.
+that I'm never going to look at again.
 
+* The /Slow Burns/ Principle
 
 Next we have the principle of slow burns and I think this is another
 really important aspect of my own personal productivity and that most
 of the things I do are slow burns rather than heavy lifts so on the
 one hand we've got heavy lifts so like imagine you want to write a
 book or you want to make an online course and you think right i'm
-going to go to a cabin in the woods and i'm going to sit down and do
-the thing and i'm going to do all the work for it in a small amount of
+going to go to a cabin in the woods and I'm going to sit down and do
+the thing and I'm going to do all the work for it in a small amount of
 time and that'll be like your heavy lift like you you're lifting a
 very heavy load this project is like a big a big thing that you have
 to do all at once and this sort of heavy lift mentality and like at
@@ -148,18 +161,18 @@ brain methodology.
 And the main idea is that we have this list of projects that we're
 working on and they're all kind of on the slow burner like for me
 right now for example I've got a handful of online courses and like
-books and other kind of products in the pipeline but i'm never sitting
+books and other kind of products in the pipeline but I'm never sitting
 down and kind of bashing through them one at a time instead I've got
 them on the slow burn and so over time as I read and watch and listen
 to things and discover interesting ideas and come up with my own ideas
 some of the time it'll just go in straight into my second brain and
 into the relevant project and so over time instead of kind of doing a
-big project one at a time i'm doing all 10 of these projects like in
+big project one at a time I'm doing all 10 of these projects like in
 very very very small amounts and so now when it comes for me to you
 know spend a day consolidating all of the bits into the next
 skillshare class for example it's actually very easy to put together
 because I've already done the work over time it's not a heavy lift
-that i'm struggling with instead it's a slow burn.
+that I'm struggling with instead it's a slow burn.
 
 
 That just by default through spending time on the internet and
@@ -207,21 +220,21 @@ efficient is that a lot of these intermediate packets you can actually
 put in different essays and so what I would do when I was at
 university and this was the method that helped me rank first in the u
 group one year um what I used to do is I would memorize the
-intermediate packets or the content blocks and then i'd be able to
+intermediate packets or the content blocks and then I'd be able to
 essentially in my head drag and drop them into whatever I say I wanted
 to that was relevant to memory for example and even outside the world
 of essay writing and academia it's really relevant like for you know
 for example this video on 10 principles of building a second brain
 each of these 10 principles are their own intermediate packet and i
 know that in the future when I make another kind of video or if i'm
-writing a blog post or if i'm writing a book there are surely some
+writing a blog post or if I'm writing a book there are surely some
 aspects of this video some intermediate packets that I can just drag
 and drop into my other thing.
 
 So firstly thinking in that way really helps because it means that
 it's a lot easier to put stuff together for your next project but also
 in a way it makes it easier to get started on your current project so
-for example when i'm writing an essay I don't think of it as oh damn i
+for example when I'm writing an essay I don't think of it as oh damn i
 need to sit down and write the whole essay which would be more of a
 heavy lift I think of it as okay I just need to focus on the
 introduction or I just need to write that one intermediate packet of
@@ -255,13 +268,13 @@ didn't start taking notes on stuff until like last year when i
 discovered this building a second brain course and I really wish i'd
 been doing this since like the age of 15 when I first started reading
 non-fiction books because if I imagine all the hundreds of books that
-i've read over the last like decade of my life if i'd thought to
+i've read over the last like decade of my life if I'd thought to
 summarize them or just just like quickly right up my insides or the
-interesting things I was thinking about or that i'd i'd come across
+interesting things I was thinking about or that I'd i'd come across
 from reading the book looking back at that now would have been such a
-huge treasure trove of information and now i'm having to kind of go
+huge treasure trove of information and now I'm having to kind of go
 back through all the books I've ever read and and like reread them and
-then summarize them and I i really wish i'd been doing that more as as
+then summarize them and I i really wish I'd been doing that more as as
 i was growing up and so occasionally you know I'll do like an
 instagram live and people will ask me what's your biggest regret in
 life and I say honestly you know it's that I didn't take more notes
@@ -274,15 +287,15 @@ doing principle number nine is you want to make it easier for your
 future self and the way that I think of my second brain.
 
 I.e. my kind of suite of digital note-taking apps that I use for
-different different things is that ultimately i'm putting in the work
+different different things is that ultimately I'm putting in the work
 now to create a resource that my future self is going to find helpful
 and so while right now I might be listening to a podcast and I you
-know hear the word transactional analysis let's say i'm listening to a
+know hear the word transactional analysis let's say I'm listening to a
 podcast about transactional analysis that was an episode that me and
 my brother did on a podcast somewhat recently I might be tempted to
 just write down transactional analysis because I kind of know right
 now what it means but that's not particularly useful to my future self
-because my brain is a dumbass and i'm going to forget exactly what
+because my brain is a dumbass and I'm going to forget exactly what
 it's meant and so I'll take a little bit of time right now to write a
 few notes on it to flesh it out in my own words so that when future me
 comes across this note on transactional analysis future me will know
@@ -291,10 +304,10 @@ like endlessly frustrates me of what I used to do back in the day
 where I looked through my evernote from like 2015 and I think what the
 hell does this even mean like I don't remember what I was thinking
 when I took this note because I assumed too much intelligence on the
-part of my of my future self and so now when i'm creating stuff i'm
-always thinking with my future self in mind equally if i'm studying
-for an exam and i'm using anki flash cards or anything i'm thinking to
-myself my brain is a dumb ass i'm not going to remember this therefore
+part of my of my future self and so now when I'm creating stuff i'm
+always thinking with my future self in mind equally if I'm studying
+for an exam and I'm using anki flash cards or anything I'm thinking to
+myself my brain is a dumb ass I'm not going to remember this therefore
 i need to create the flash card or create the note in a way that my
 future self will be will easily be able to access it and that's
 another big part of the building second brain methodology and our
@@ -306,7 +319,7 @@ It's it's like an anti-perfectionist take on this because one of the
 traps that we can fall into if we're building out a note-taking system
 is that we can fall into the trap of perfectionism where we think okay
 well right I've just discovered how to use notion I've watched ali and
-thomas frank's videos on how to use notion i'm going to create this
+thomas frank's videos on how to use notion I'm going to create this
 elaborate database of all the stuff that I've ever read and it's going
 to have like 18 pieces of metadata assigned for each one and we can
 get stuck kind of appreciating the intricacies of the app and the
